<resources>
    <string name="app_version">xiaoyu_android_1.076_20170909</string>
    <string name="bus_stop">(公交站)</string>
    <string name="switch_voice">切换语音聊天</string>
    <string name="being_invited"> 正在等待对方接受邀请..</string>
    <string name="processing_invitation"> 邀请你进行视频聊天..</string>
    <string name="switch_camera">转换摄像头</string>
    <string name="call_mode">听筒模式</string>
    <string name="speaker_mode">扬声器模式</string>
    <string name="copy">复制</string>
    <string name="resend">重发</string>
    <string name="transpond">转发</string>
    <string name="send_message">发表</string>
    <string name="title_activity_pick_photo">PickPhotoActivity</string>
    <string name="send">发送</string>
    <string name="preview">预览</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="auth_select">授权</string>
    <string name="exit">退出</string>
    <string name="thumb_remove">清理图片缓存</string>
    <string name="notify_setting">通知设置</string>
    <string name="thumb_remove_finish">清理完成</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="request_login_faild">请求登录消息服务器失败</string>
    <string name="sdcard_unavaluable">请检查存储卡是否可用</string>
    <string name="image_path_unavaluable">图片路径无效</string>
    <string name="disconnected">连接已断开</string>
    <string name="requesting">正在获取信息...</string>
    <string name="connecting">正在连接...</string>
    <string name="chat">发信息</string>
    <string name="contact_all">全部</string>
    <string name="contact_department">部门</string>
    <string name="top_left_back">小雨</string>
    <string name="group_name_add">加入群聊</string>
    <string name="group_name_tip">群聊名称</string>
    <string name="check_group_user">查看全部群成员</string>
    <string name="group_name_nick">群聊昵称</string>
    <string name="group_name_qr">群二维码</string>
    <string name="group_name_notice">群公告</string>
    <string name="group_name_notice_title">只有群主可以编辑</string>
    <string name="group_name_show_nick">我在本群中的昵称</string>
    <string name="chat_failed_search">未搜索到匹配的结果</string>
    <string name="save">保存</string>
    <string name="save_photo">保存图片</string>
    <string name="chat_detail">聊天详情</string>
    <string name="contacts">联系人</string>
    <string name="choose_contact">选择联系人</string>
    <string name="switch_login_server">忘记密码?</string>
    <string name="switch_register_server">快速注册</string>
    <string name="switch_login_server_title">输入登录服务器地址</string>
    <string name="show_app_name">小雨</string>
    <string name="notify_tuku">图库</string>
    <string name="select_group">选择一个群</string>
    <string name="select_user">选择联系人</string>
    <string name="search_text">搜索</string>
    <string name="vip_xiaowei_string">小雨专区</string>
    <string name="thumb_file_manger">文件管理</string>
    <string name="vip_manger_string">会员专区</string>
    <string name="help_manger_string">帮助与反馈</string>
    <string name="setting_manger_string">设置</string>
    <string name="star_req_list">新的位友</string>
    <string name="account_security">账号与安全</string>
    <string name="currency_text">通用</string>
    <string name="synopsis">简介</string>
    <string name="nicheng_name">名字</string>
    <string name="beizhu_name">备注</string>
    <string name="new_message">新消息通知</string>
    <string name="privacy_message">隐私</string>
    <string name="currency_string">通用</string>
    <string name="already_protect">已保护</string>
    <string name="un_setting">未设置</string>
    <string name="message_notify">新消息通知</string>
    <string name="about_xiaowei">关于小雨</string>
    <string name="personal_head">个人头像</string>
    <string name="email">邮箱地址</string>
    <string name="tel_phone">手机号码</string>
    <string name="yu_message">消息中心</string>
    <string name="refuse_reason">拒绝理由</string>
    <string name="select_school">选择学校</string>
    <string name="ranking_list">排行榜</string>
    <string name="interlocution">问答</string>
    <string name="baofoujiao">抱佛脚</string>
    <string name="step_counter_text">计步</string>
    <string name="yu_friends">我的雨友</string>
    <string name="binding_friends">绑定的雨友</string>
    <string name="manage_yu_friends">可管理我的雨友</string>
    <string name="yu_friends_group">雨友群</string>
    <string name="new_xiaowei_name">请输入小雨号</string>
    <string name="new_email">你的新邮箱地址</string>
    <string name="password">小雨密码</string>
    <string name="lock_text">已保护</string>
    <string name="accountProtection">账号保护</string>
    <string name="QR_code">二维码</string>
    <string name="sex">性别</string>
    <string name="my_app_market">我的应用</string>
    <string name="dev_bell_mode">铃声模式</string>
    <string name="locality">地区</string>
    <string name="signature">个性签名</string>
    <string name="no_wei_string">你没有位群,请添加位群</string>
    <string name="security">小雨安全中心</string>
    <string name="security_prompt">如果遇到账号信息泄露,忘记密码,诈骗等账号安全问题,可前往小雨安全中心</string>
    <string name="help_1_string">你未发现小雨功能</string>
    <string name="help_2_string">允许查看我的位置说明</string>
    <string name="help_3_string">小视频自动循环播放会产品额外流量吗</string>
    <string name="regist_name">注册</string>
    <string name="regist_black">返回</string>
    <string name="my_information">我的</string>
    <string name="regist_code_text">(30s)重新发送</string>
    <string name="regist_code_update">获取动态验证码</string>
    <string name="add_phone">新增</string>
    <string name="show_regist_name">你的登录账户为: xxxxxxx, 请输入密码</string>
    <string name="search_hint">位友,设备信息查询</string>
    <string name="setting_label">设置备注</string>
    <string name="setting_phone_name">电话号码</string>
    <string name="yuyou_setting">雨友管理设置</string>
    <string name="setting_position">位置信息</string>
    <string name="last_position">(最后位置)</string>
    <string name="locality_string">广东  深圳</string>
    <string name="locality_show">地区</string>
    <string name="show_more">个性签名</string>
    <string name="chat_send">发送信息</string>
    <string name="chat_follow">添加位友</string>
    <string name="remove_black_list">移出黑名单</string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="setting_phone">电话号码</string>
    <string name="delete_friends">删除</string>
    <string name="delete">删除</string>
    <string name="exit_group">删除并退出</string>
    <string name="user_info">资料设置</string>
    <string name="add_friends">添加朋友</string>
    <string name="add_xiaowei">小雨</string>
    <string name="cancel_follow">取消位友</string>
    <string name="search_phone">小雨号/手机号码</string>
    <string name="shao_text">扫一扫</string>
    <string name="shao_show_text">扫描二维码名片</string>
    <string name="phone_contact">手机联系人</string>
    <string name="nickname_text">手机联系人</string>
    <string name="nickname_show_text">添加或邀请通讯录中的朋友</string>
    <string name="new_friends">新朋友</string>
    <string name="new_wei_friends">新的位友</string>
    <string name="wei_group">位群</string>
    <string name="wei_friends">位友</string>
    <string name="device">设备</string>
    <string name="xiaowei_device">小雨</string>
    <string name="business">企业号</string>
    <string name="business_hao">沸石集团</string>
    <string name="friends_gourp">好友群</string>
    <string name="real_time_info">实时监控</string>
    <string name="exit_group_hint">不好意思，你可能被退出群</string>
    <string name="query_historical_track">历史轨迹</string>
    <string name="start_title">起点:</string>
    <string name="end_title">终点:</string>
    <string name="xiaowei_area">小雨专区</string>
    <string name="stat_dev">开始时间:</string>
    <string name="end_dev">结束时间:</string>
    <string name="agree_string">接受</string>
    <string name="received_text">已添加</string>
    <string name="new_friends_add">添加朋友</string>
    <string name="search_add_friends">添加位友</string>
    <string name="switch_login_text">登录</string>
    <string name="submit_text">提交</string>
    <string name="retransmission">重发</string>
    <string name="switch_submit_text">收不到验证码?</string>
    <string name="msg_camera_framework_bug">对不起，摄像头遇到了一个问题。您可能需要重新启动设备</string>
    <string name="button_ok">好的</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <string name="grou_list">好友群</string>
    <string name="star_list">位友</string>
    <string name="device_list">设备</string>
    <string name="xiaowei_list">发现</string>
    <string name="agreement_show_text">用户服务协议</string>
    <string name="group_qr">群的二维码名片</string>
    <string name="info_qr">二维码名片</string>
    <string name="add_device">添加设备</string>
    <string name="no_device">咦，还没有设备！</string>
    <string name="add_or_buy_device">请点击左上角添加设备或购买设备</string>
    <string name="setting_dev_phone">设置号码</string>
    <string name="confirm_text">确定</string>
    <string name="wei_grou_list">位群</string>
    <string name="card_text">定位卡片机</string>
    <string name="my_device">我的设备</string>
    <string name="device_setting">设置</string>
    <string name="select_gourp_list">选择群聊</string>
    <string name="electric_vehicle">电动车</string>
    <string name="intercom_vehicle">对讲机</string>
    <string name="children_watch_vehicle">儿童手表</string>
    <string name="device_classification">设备分类</string>
    <string name="smart_camera_text">智能摄像头</string>
    <string name="intercom_text">智能对讲机</string>
    <string name="family">设备授权</string>
   <string name="device_authorize">设备授权</string>
    <string name="custody">实时监护</string>
    <string name="gomap">进入地图</string>
    <string name="setting_devphone">设备手机号码</string>
    <string name="calls_inquiry">话费查询</string>
    <string name="dev_info_height">身高</string>
    <string name="dev_info_weight">体重</string>
    <string name="dev_info_birthday">生日</string>
    <string name="task_title">标题</string>
    <string name="safety_remind">安全提醒</string>
    <string name="charing_remind">充电提醒</string>
    <string name="safety_low_electric_warning">低电量报警</string>
    <string name="safety_off_line_warning">离线报警</string>
    <string name="safety_dev_drop_warning">手表脱落报警</string>
    <string name="safety_wear_on_warning">手表戴上报警</string>
    <string name="safety_fence_warning">安全围栏报警</string>
    <string name="camera_off_lint_hint_text">打开离线报警设备在关机或断网状态将会报警提示</string>
    <string name="safety_investigation_warning">侦查报警</string>
    <string name="safety_investigation_warning_hint">打开 侦察报警设备在监控侦察到有移动物体状态下将会报警提示</string>
    <string name="power_supply_warning">供电报警</string>
    <string name="power_supply_warning_hint">打开供电报警当设备在使用内置电池供电情况下将会报警提示</string>
    <string name="no_safety_fence_hint1">没有安全围栏哦!</string>
    <string name="no_safety_fence_hint2">请点击右上角选择添加设置安全围栏</string>
    <string name="no_sweet_reminder_hint1">没有关爱提醒哦!</string>
    <string name="no_sweet_reminder_hint2">请点击右上角选择添加设置关爱提醒</string>
    <string name="no_lesson_data_hint2">请点击右上角选择添加设置上课模式</string>
    <string name="no_attend_class_hint1">没有上课禁用哦!</string>
    <string name="no_attend_class_hint2">请点击右上角选择添加设置上课禁用</string>
    <string name="no_attend_class_hint3">上课禁用期间手表将只能看时间和使用SOS求救功能!</string>
    <string name="safety_sos_warning">SOS求助报警</string>
    <string name="safety_charge_warning">话费查询</string>
    <string name="device_xiaowei">实时位置</string>
    <string name="group_postion">位置信息</string>
    <string name="sweet_remind">关爱提醒</string>
    <string name="attend_class">上课禁用</string>
    <string name="light_time">亮屏时间</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="morning_class_time">上午上课时间</string>
    <string name="afternoon_class_time">下午上课时间</string>
    <string name="sweet_remind_time">提醒时间</string>
    <string name="time_compare_result_hint">结束时间不能小于开始时间</string>
    <string name="family_concern_text">添加到白名单的号码才可拨打设备</string>
    <string name="electronic_text">设备离开或进入已设置启用状态区域范围，均会给您发送通知</string>
    <string name="white_list">通话白名单</string>
    <string name="input_identity">请输入昵称</string>
    <string name="please_input_phone_number">请输入电话号码</string>
    <string name="white_phone_number_add">新增白名单</string>
    <string name="electronic_warning">安全围栏</string>
</resources>