<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/my_setting_color">


    <FrameLayout
        android:id="@+id/top_color"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_default_height"
        android:background="@color/default_top_color" >

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/white_phone_number_add"
            android:textColor="@color/default_bar_black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true">

            <Button
                android:id="@+id/icon_arrow_back"
                android:layout_width="@dimen/title_button"
                android:layout_height="@dimen/title_button"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/top_bar_default_left"
                android:background="@drawable/icon_arrow_friends_info" />

            <TextView
                android:id="@+id/left_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/regist_black"
                android:textColor="@color/default_bar_black"
                android:textSize="16sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/right_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center|right"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textColor="@color/cancel_color"
            android:textSize="16sp" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/rl_set_identity"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_fragment_normal_item_bg_height"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:background="@drawable/white_phone_number_setting"
        >

        <EditText
            android:id="@+id/tv_identity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:hint="@string/input_identity"
            android:textColor="@color/default_bar_black"
            android:textColorHint="@color/edit_hint_color"
            android:background="@color/transparent"
            android:textSize="@dimen/text_size_level_4" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_set_phone_number"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_fragment_normal_item_bg_height"
        android:layout_marginTop="15dp"
        android:background="@drawable/white_phone_number_setting"
        android:clickable="true">

        <TextView
            android:id="@+id/tv_input_number_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/please_input_phone_number"
            android:textColor="@color/edit_hint_color"
            android:textSize="@dimen/text_size_level_4"
             />

        <EditText
            android:id="@+id/et_inout_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:hint="@string/please_input_phone_number"
            android:paddingLeft="15dp"
            android:textColor="@color/default_bar_black"
            android:textSize="@dimen/text_size_level_4"
            android:textColorHint="@color/edit_hint_color"
            android:visibility="gone"
            />
    </RelativeLayout>

</LinearLayout>
